fixing categories/food-cards, some spacing (wip)

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ h1 {
     font-family: 'Righteous', cursive;
 }
 
-h2, h3 {
+h2, h3, h4 {
     font-family: 'Roboto', sans-serif;
 }
 
@@ -47,75 +47,111 @@ h2, h3 {
     margin: 123px auto 108px 0;
     display: flex;
     flex-direction: column;
-    border: 2px dashed blue;
-}
-.main-container h1 {
-    margin: 0 auto 17px 0;
-    font-size: 26px;
+    /* border: 0.5px dashed blue; */
 }
 
 /*  =====   DISHES  ===== */
 .dishes {
-    height: 260px;
-    margin: 0 0 27px 19px;
+    margin: 0 0 20px 0;
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+}
+.dishes h1 {
+    font-size: 26px;
+    margin: 0 auto 10px 19px;
 }
 
 .horiz-list {
-    width: calc(100% - 19px);
-    height: 216px;
+    width: 100%;
+    height: 240px;
+    margin: 0 0 0 0;
+    padding-left: 19px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     overflow-x: scroll;
-    border: 2px dashed orange; 
+    /* background-color: yellow; */
 }
 
 .food-card {
     width: 172px;
-    height: 100%;
-    margin-right: 16px;
+    height: 216px;
+    margin: 4px 16px 4px 0;
     background-color: #ffffff;
-    border: 2px solid cornflowerblue;
-    box-shadow: 0 0 10px rgb(0, 0, 0, 0.25);
+    border-radius: 9px;
+    box-shadow: 0 0 10px -4px rgb(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
 .food-card img {
     width: 144px;
     height: 87px;
-    margin: 18px 14px 8px 14px;
+    margin: 17px 14px 0 15px;
+    border-radius: 4px;
+    /* ATENÇÃO À BORDA/TAMANHO DAS IMGS!!!!!!!!!!!!!!! */
 }
 
-.food-card h2, h3 {
-    margin: 8px auto 4px 15px;
+.food-card h2 { /* food name */
+    margin: 8px auto 0 15px;
+    font-size: 16px;
+    font-weight: 700;
+    color: #333333;
 }
+
+.food-card h3 { /* food details */
+    margin: 4px auto 0 15px;
+    font-weight: 300;
+    font-size: 15px;
+    color: #a6a6a6;
+}
+
+.food-card h4 { /* price */
+    margin: 10px auto 14px 15px;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+}
+
+
 /*  =====   DISHES  ===== */
+
 
 /*  =====   BEVERAGES  ===== */
 .beverages {
-    height: 260px;
-    margin: 0 0 27px 19px;
+    margin: 0 0 20px 0;
     display: flex;
     flex-direction: column;
-    border: 2px solid crimson;
+    /* border: 1px solid red; */
 }
+.beverages h1 {
+    font-size: 26px;
+    margin: 0 0 10px 19px;
+}
+
 /*  =====   BEVERAGES  ===== */
 
 /*  =====   DESSERTS  ===== */
 .desserts {
-    height: 260px;
-    margin: 0 0 27px 19px;
+    margin: 0 0 20px 0;
     display: flex;
     flex-direction: column;
-    border: 2px solid maroon;
+    /* border: 1px solid red; */
 }
+.desserts h1 {
+    font-size: 26px;
+    margin: 0 auto 10px 19px;
+}
+
 /*  =====   DESSERTS  ===== */
 
 
 /*  =====   BOTTOM-RIBBON  ===== */
 .bottom-ribbon {
     position: fixed;
-    bottom: 0;
+    bottom: 0px;
     left: 0;
     width: 414px;
     height: 92px;
